# QtCalculator

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  money.cpp  money.h  money.ui  utils.cpp  utils.h
